# hyprTwoPanePersistent

./: CMakeLists.txt  README.md  TwoPanePersistent.cpp  TwoPanePersistent.hpp  hyprpm.toml  main.cpp
